// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`InputField > renders help text correctly 1`] = `
<div>
  <div
    class="ds:w-full"
  >
    <label
      class="ds:inline-block ds:mb-4 ds:align-top ds:text-form-label ds:font-arial ds:text-primary-gray"
      for="«r6»"
    >
      Username
    </label>
    <input
      aria-describedby="«r7»"
      aria-invalid="false"
      aria-required="false"
      autocomplete="off"
      class="ds:block ds:w-full ds:rounded ds:border ds:border-border-gray ds:bg-white ds:p-5 ds:text-primary-gray ds:focus:outline-2 ds:focus:outline-accent ds:placeholder:text-secondary-gray ds:font-arial ds:text-body-md"
      data-testid="input3"
      id="«r6»"
      type="text"
      value="john"
    />
    <div
      class="ds:mt-2 ds:block ds:text-help ds:text-secondary-gray ds:font-arial"
      data-testid="input3-help"
      id="«r7»"
    >
      Please enter your username
    </div>
  </div>
</div>
`;

exports[`InputField > renders input correctly 1`] = `
<div>
  <div
    class="ds:w-full"
  >
    <label
      class="ds:inline-block ds:mb-4 ds:align-top ds:text-form-label ds:font-arial ds:text-primary-gray"
      for="«r3»"
    >
      Username
    </label>
    <input
      aria-invalid="false"
      aria-required="false"
      autocomplete="off"
      class="ds:block ds:w-full ds:rounded ds:border ds:border-border-gray ds:bg-white ds:p-5 ds:text-primary-gray ds:focus:outline-2 ds:focus:outline-accent ds:placeholder:text-secondary-gray ds:font-arial ds:text-body-md"
      data-testid="input2"
      id="«r3»"
      placeholder="Enter your username"
      type="text"
      value="john"
    />
  </div>
</div>
`;

exports[`InputField > renders label correctly 1`] = `
<div>
  <div
    class="ds:w-full"
  >
    <label
      class="ds:inline-block ds:mb-4 ds:align-top ds:text-form-label ds:font-arial ds:text-primary-gray"
      for="«r0»"
    >
      Username
    </label>
    <input
      aria-invalid="false"
      aria-required="false"
      autocomplete="off"
      class="ds:block ds:w-full ds:rounded ds:border ds:border-border-gray ds:bg-white ds:p-5 ds:text-primary-gray ds:focus:outline-2 ds:focus:outline-accent ds:placeholder:text-secondary-gray ds:font-arial ds:text-body-md"
      data-testid="input"
      id="«r0»"
      type="text"
      value="john"
    />
  </div>
</div>
`;

exports[`InputField > updates input value correctly 1`] = `
<div>
  <div
    class="ds:w-full"
  >
    <label
      class="ds:inline-block ds:mb-4 ds:align-top ds:text-form-label ds:font-arial ds:text-primary-gray"
      for="«r9»"
    >
      Username
    </label>
    <input
      aria-invalid="false"
      aria-required="false"
      autocomplete="off"
      class="ds:block ds:w-full ds:rounded ds:border ds:border-border-gray ds:bg-white ds:p-5 ds:text-primary-gray ds:focus:outline-2 ds:focus:outline-accent ds:placeholder:text-secondary-gray ds:font-arial ds:text-body-md"
      data-testid="input4"
      id="«r9»"
      type="text"
      value="test value"
    />
  </div>
</div>
`;
